fixed z-index on social icons

--- a/css/main.scss
+++ b/css/main.scss
@@ -302,7 +302,7 @@ section {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  z-index: 1;
+  z-index: 6;
 
   i {
     color: $primary-fontColor;
